Add Gradle support to manage dependencies and automate builds

--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("hirono.Hirono")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "hirono"
     archiveClassifier = null
 }
 
